--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.4",
-    "jquery-mobile": "~1.4.5"
+    "jquery-mobile": "~1.4.5",
+    "zepto": "~1.1.6"
   }
 }
